--- a/projets/tic-tac-toe/styles.css
+++ b/projets/tic-tac-toe/styles.css
@@ -1,7 +1,28 @@
 body {
-  font-family: sans-serif;
+  background-color: #09081f;
+  font-family: "lores-12-bold-alt-oakland", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+h1,
+p {
+  color: white;
+  margin: 0px;
+}
+
+h2 {
+  color: #fff27b;
+  margin: 0px;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-  background: #f0f0f0;
+  gap: 20px;
 }
 h1 {
   margin-top: 20px;
@@ -29,10 +50,19 @@ h1 {
 .status {
   margin-top: 20px;
   font-size: 1.5rem;
+  color: #fff27b;
 }
 .reset {
   margin-top: 20px;
   padding: 10px 20px;
   font-size: 1rem;
   cursor: pointer;
+}
+
+button {
+  background-color: white;
+  color: #09091d;
+  border: none;
+  border-radius: 10px;
+  font-family: "lores-12-bold-alt-oakland", sans-serif;
 }
